-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.3.0-beta1
-
None
-
Qt for Device Creation
-
090942642024982b3a11b0571c78fb522f49e013
Currently you cannot really use the qmake properties with QtCreator in Qt For Device Creation product.
The problem is when qmake properties are used the binary is deployed to the host sysroot path in the target device.
This causes that any of the components build from the Qt sources are deployed to the completely wrong directories.
For example following target path:
target.path = $$[QT_INSTALL_EXAMPLES]/quickcontrols2/chattutorial/chapter1-settingup
INSTALLS += target
Is deployed to the following directory:
15:33:25: Starting process. Complete command line is '/home/teholapp/Qt/Tools/b2qt/adb -s 10.9.21.97:5555 shell mkdir -p /home/teholapp/Qt/5.7/Boot2Qt/raspberrypi3/toolchain/sysroots/cortexa7hf-vfp-vfpv4-neon-poky-linux-gnueabi/usr/share/examples/quickcontrols2/chattutorial/chapter5-styling'.
- relates to
-
QTBUG-57887 [B2QT] In examples QT_INSTALL_EXAMPLES is used for deployment
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-17466 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
183489,2 | fix/hack deployment of qt examples | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |